[gd_scene load_steps=6 format=3 uid="uid://cv682qbb7bnj8"]

[ext_resource type="Script" path="res://predator.gd" id="1_tg0di"]
[ext_resource type="Texture2D" uid="uid://dgym7a6mcxemj" path="res://assets/triangle.png" id="2_w5ucs"]
[ext_resource type="Texture2D" uid="uid://dik1t87r0t1i3" path="res://assets/circle.png" id="3_gk2j2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_exqvs"]
radius = 1568.0
height = 7556.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d4fok"]
radius = 46.1736

[node name="Predator" type="CharacterBody2D" groups=["predator"]]
script = ExtResource("1_tg0di")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.8, 0.0784314, 0.192157, 1)
rotation = 1.5708
texture = ExtResource("2_w5ucs")

[node name="Forward" type="Node2D" parent="."]
position = Vector2(95, 1)

[node name="Sprite2D2" type="Sprite2D" parent="Forward"]
visible = false
modulate = Color(0.403922, 0.47451, 1, 1)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_gk2j2")

[node name="SightArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea"]
position = Vector2(2991, 0)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_exqvs")

[node name="WanderTimer" type="Timer" parent="."]
autostart = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-63, 63, 63, 0, -63, -63)

[node name="EatArea" type="Area2D" parent="."]
position = Vector2(34, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EatArea"]
shape = SubResource("CircleShape2D_d4fok")

[connection signal="body_entered" from="SightArea" to="." method="_on_sight_area_body_entered"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="body_entered" from="EatArea" to="." method="eat"]
